# Termchat

./: .gitignore  COMMANDS.md  Cargo.toml  README.md  requirements.md  requirements.txt  termchat.py  termchat_server_simple.py  ui.slint
.github/workflows/: Build Windows EXE.yml  EXE  build-deb.yml  build-macos-binary-arm64.yml  build-macos-binary-x86-64.yml  build-macos-binary-x86_64.yml  build-macos-binary.yml  build_win_binary.yml
icons/: mac_icon.icns
src/: app_state.rs  colors.rs  main.rs  message.rs  src_main_Version4.rs  websocket.rs
src/ui/: app.slint
ui/: app.slint
