[package]
name = "termchat_slint"
version = "0.1.0"
edition = "2025"

[dependencies]
slint = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.20"
tungstenite = { version = "0.20", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
crossbeam-channel = "0.5"
futures-util = "0.3"
url = "2.4"
