[package]
name = "termchat"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
url = "2.4"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
